--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 		<java.version>1.8</java.version>
 		<javax.servlet-api.version>3.1.0</javax.servlet-api.version>
 		<hikaricp.version>2.7.4</hikaricp.version>
+		<micrometer.version>0.12.0.RELEASE</micrometer.version>
+		<prometheus.version>0.1.0</prometheus.version>
 	</properties>
 	
 	<dependencies>
@@ -117,9 +119,17 @@
 		<dependency>
 		    <groupId>io.micrometer</groupId>
 		    <artifactId>micrometer-core</artifactId>
-		    <version>0.12.0.RELEASE</version>
+		    <version>${micrometer.version}</version>
+		    <scope>provided</scope>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/io.prometheus/simpleclient -->
+		<dependency>
+		    <groupId>io.prometheus</groupId>
+		    <artifactId>simpleclient</artifactId>
+		    <version>${prometheus.version}</version>
+		    <scope>provided</scope>
+		</dependency>
 		
 		<!-- Metrics is a Java library which gives you unparalleled insight into 
 					what your code does in production. Metrics provides a powerful toolkit of 
@@ -127,7 +137,7 @@
 		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
-			<optional>true</optional>
+			 <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
