--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
+		<version>1.5.9.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-
+	
+	<groupId>com.github.vindell</groupId>
 	<artifactId>spring-boot-starter-hikaricp</artifactId>
+	<version>1.5.9-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
+
 	<name>spring-boot-starter-hikaricp</name>
-	<url></url>
+	<url>https://github.com/vindell/spring-boot-starter-hikaricp</url>
 	<description>starter for hikaricp</description>
-	
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -24,6 +26,12 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+	<scm>
+		<url>https://github.com/vindell/spring-boot-starter-hikaricp</url>
+		<connection>scm:git:git://github.com/vindell/spring-boot-starter-hikaricp.git</connection>
+		<developerConnection>scm:git:git@github.com/vindell/spring-boot-starter-hikaricp.git</developerConnection>
+	</scm>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
