--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 	
 	<groupId>com.github.vindell</groupId>
-	<artifactId>spring-boot-starter-hikaricp</artifactId>
+	<artifactId>spring-boot-starter-hikaricp-plus</artifactId>
 	<description>Spring Boot Starter For HikariCP</description>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0.RELEASE</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/vindell/${project.artifactId}</url>
 	<packaging>jar</packaging>
