--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,19 +10,37 @@ server:
     key-alias: tomcat
   port: 8080
 spring:  
-  redis:
-    database: 1
-    host: 121.43.110.87
-    pool:
-      max-active: 20
   datasource: 
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://IP:3306/dbName?zeroDateTimeBehavior=convertToNull&amp;useUnicode=true&amp;characterEncoding=UTF-8
     username: xxx
     password: xxx
     type: com.alibaba.druid.pool.DruidDataSource
-    # Hikari的数据源配置：
-    hikari:
-      
+    # HiKariCP的数据源配置：
+    hikari: 
+      allow-pool-suspension: true
+      auto-commit: false
+      # 连接初始化SQL
+      connection-init-sql: select SYSDATE()
+      # 连接测试语句
+      connection-test-query: select SYSDATE()
+      # 连接超时, 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 缺省:30秒
+      connection-timeout: 30000 
+      enabled: true
+      initialization-fail-timeout: 30000
+      #一个连接idle状态的最大时长（毫秒），超时则被释放（retired），缺省:10分钟  
+      idle-timeout: 600000  
+      # 内存泄漏侦测入口
+      leak-detection-threshold: 30000
+      # 一个连接的最大的生命时间（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上，参考MySQL wait_timeout参数（show variables like '%timeout%';）
+      max-lifetime: 1800000
+      # 连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count) 
+      max-pool-size: 15 
+      # 最小闲置线程
+      min-idle: 5
+      dynamic: true
+      # 生效超时
+      validation-timeout: 30000
+ 
     
         
