--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.1.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	
@@ -373,7 +373,45 @@
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<prometheus.version>0.2.0</prometheus.version>
 		<spring-biz.version>1.0.6.RELEASE</spring-biz.version>  
+		<sharding-jdbc.version>3.1.0</sharding-jdbc.version>
+		<sharding-transaction.version>3.0.0.M3</sharding-transaction.version>
+		<spring-boot-starter-sharding-jdbc.version>${sharding-jdbc.version}</spring-boot-starter-sharding-jdbc.version>
 	</properties>
+	
+	<dependencyManagement>
+		<dependencies>
+			<!-- https://mvnrepository.com/artifact/io.shardingsphere/sharding-jdbc-spring-boot-starter -->
+			<dependency>
+			    <groupId>io.shardingsphere</groupId>
+			    <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+			    <version>${spring-boot-starter-sharding-jdbc.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.shardingsphere/sharding-transaction-spring-boot-starter -->
+			<dependency>
+			    <groupId>io.shardingsphere</groupId>
+			    <artifactId>sharding-transaction-spring-boot-starter</artifactId>
+			    <version>${spring-boot-starter-sharding-jdbc.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.shardingsphere/sharding-jdbc-orchestration-spring-boot-starter -->
+			<dependency>
+			    <groupId>io.shardingsphere</groupId>
+			    <artifactId>sharding-jdbc-orchestration-spring-boot-starter</artifactId>
+			    <version>${spring-boot-starter-sharding-jdbc.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/com.github.vindell/spring-biz -->
+			<dependency>
+			    <groupId>com.github.vindell</groupId>
+			    <artifactId>spring-biz</artifactId>
+			    <version>${spring-biz.version}</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/io.prometheus/sampleclient -->
+			<dependency>
+			    <groupId>io.prometheus</groupId>
+			    <artifactId>simpleclient</artifactId>
+			    <version>${prometheus.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	
 	<dependencies>
 
@@ -440,30 +478,30 @@
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 		</dependency>
-		
 		<!-- https://mvnrepository.com/artifact/io.micrometer/micrometer-core -->
 		<dependency>
 		    <groupId>io.micrometer</groupId>
 		    <artifactId>micrometer-core</artifactId>
 		    <scope>provided</scope>
 		</dependency>
-		
 		<!-- https://mvnrepository.com/artifact/io.prometheus/sampleclient -->
 		<dependency>
 		    <groupId>io.prometheus</groupId>
 		    <artifactId>simpleclient</artifactId>
-		    <version>${prometheus.version}</version>
 		    <scope>provided</scope>
 		</dependency>
-		
-		
 		<!-- Metrics is a Java library which gives you unparalleled insight into 
 					what your code does in production. Metrics provides a powerful toolkit of 
 			ways to measure the behavior of critical components in your production environment. -->
 		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
-			 <scope>provided</scope>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>io.shardingsphere</groupId>
+		    <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+		    <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
@@ -477,7 +515,6 @@
 		<dependency>
 			<groupId>com.github.vindell</groupId>
 			<artifactId>spring-biz</artifactId>
-			<version>${spring-biz.version}</version>
 		</dependency>
 
 	</dependencies>
