--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.6.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>com.github.hiwepy</groupId>
 	<artifactId>hikaricp-plus-spring-boot-starter</artifactId>
 	<description>Spring Boot Starter For HikariCP</description>
-	<version>1.0.9-SNAPSHOT</version>
+	<version>2.0.0.RELEASE</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>https://github.com/hiwepy/${project.artifactId}</url>
 	<packaging>jar</packaging>
@@ -365,8 +365,8 @@
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
-		<prometheus.version>0.10.0</prometheus.version>
-		<spring-biz.version>1.1.1.RELEASE</spring-biz.version>
+		<prometheus.version>0.15.0</prometheus.version>
+		<spring-biz.version>1.1.2.RELEASE</spring-biz.version>
 	</properties>
 
 	<dependencyManagement>
@@ -377,7 +377,7 @@
 			    <artifactId>spring-biz</artifactId>
 			    <version>${spring-biz.version}</version>
 			</dependency>
-			<!-- https://mvnrepository.com/artifact/io.prometheus/sampleclient -->
+			<!-- https://mvnrepository.com/artifact/io.prometheus/simpleclient -->
 			<dependency>
 			    <groupId>io.prometheus</groupId>
 			    <artifactId>simpleclient</artifactId>
@@ -457,11 +457,11 @@
 		    <artifactId>micrometer-core</artifactId>
 		    <scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.prometheus/sampleclient -->
+		<!-- https://mvnrepository.com/artifact/io.prometheus/simpleclient -->
 		<dependency>
-		    <groupId>io.prometheus</groupId>
-		    <artifactId>simpleclient</artifactId>
-		    <scope>provided</scope>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<!-- Metrics is a Java library which gives you unparalleled insight into
 					what your code does in production. Metrics provides a powerful toolkit of
